# indexcraft-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: algorithms.txt  data_structures.txt  systems.txt
src/: index.c  index.h  main.c
